Fix view template css on firefox

--- a/static/css/view.css
+++ b/static/css/view.css
@@ -1,3 +1,7 @@
+#view_wrapper {
+	display: flex;
+}
+
 #view_left {
 	display: table-cell;
 	text-align: center;
